fixed recent posts alignment
hopefully...

--- a/static/style.css
+++ b/static/style.css
@@ -241,4 +241,11 @@ nav:target {
     right: 5%;
     
 }
+.r_posts {
+        
 
+}
+.posts {
+    text-align:left;
+    padding-left: 35%;
+}
